[package]
name = "morus"
version = "0.1.1"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "MORUS authenticated cipher (MORUS-1280-128)"
keywords = ["morus", "cipher", "aead",  "crypto"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-morus"
repository = "https://github.com/jedisct1/rust-morus"
categories = ["no-std", "cryptography"]
readme = "README.md"

[dev-dependencies]
benchmark-simple = "0.1.7"
aes-gcm = "0.9.4"
chacha20poly1305 = "0.9.0"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
std = []

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
